--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h3 class="titulo">METAS</h3>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/01.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/METAS/01.svg" alt="Lampada com estrelas ao lado">
             <h3 class="subtitulo cinza top50">ADAPTAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 reforçar a resiliência e a capacidade de adaptação a riscos
@@ -107,7 +107,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/02.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/METAS/02.svg" alt="Peças de quebra cabeça">
             <h3 class="subtitulo tcenter cinza top50">INTEGRAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 integrar medidas da mudança do clima nas políticas, estratégias e
@@ -116,7 +116,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/03.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/METAS/03.svg" alt="Mãos juntas (equipe)">
             <h3 class="subtitulo tcenter cinza top50">CONCIENTIZAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 melhorar a educação, aumentar a conscientização e a capacidade humana
@@ -127,7 +127,7 @@
 
         <div class="coluna quatro">
 
-            <img class="icone" src="img/metas/04.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/metas/04.svg" alt="Prancheta com planejamento">
             <h3 class="subtitulo tcenter cinza top50">PLANEJAMENTO</h3>
             <p class="paragrafo tcenter cinza">
                 Promover mecanismos para a criação de capacidades para o planejamento
