--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="tipografia.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Staatliches&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="img/icon_navegador.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -26,7 +25,7 @@
             <li> <a href="#porque">Porquê</a></li>
             <li> <a href="#metas">Metas</a></li>
             <li> <a href="#causas">Causas</a></li>
-            <li> <a href="#consequencias">Consequencias</a></li>
+            <li> <a href="#acoes">Ações</a></li>
             <li> <a href="#sobre">Sobre</a></li>
         </ul>
 
@@ -36,7 +35,7 @@
 
     <div id="imagem_fundo">
 
-        <h1 class="titulo bot5 top_titulo">AÇÃO CONTRA A !!MUDANÇA<br> GLOBAL DO CLIMA</h1>
+        <h1 class="titulo bot5 top_titulo">AÇÃO CONTRA A MUDANÇA<br> GLOBAL DO CLIMA</h1>
 
 
         <p class="paragrafo">
@@ -98,7 +97,7 @@
         <h3 class="titulo">METAS</h3>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/01.svg" alt="Lampada com estrelas ao lado">
+            <img class="icone" src="img/METAS/01.svg" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo cinza top50">ADAPTAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 reforçar a resiliência e a capacidade de adaptação a riscos
@@ -107,7 +106,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/02.svg" alt="Peças de quebra cabeça">
+            <img class="icone" src="img/METAS/02.svg" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo tcenter cinza top50">INTEGRAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 integrar medidas da mudança do clima nas políticas, estratégias e
@@ -116,7 +115,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/03.svg" alt="Mãos juntas (equipe)">
+            <img class="icone" src="img/METAS/03.svg" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo tcenter cinza top50">CONCIENTIZAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 melhorar a educação, aumentar a conscientização e a capacidade humana
@@ -127,7 +126,7 @@
 
         <div class="coluna quatro">
 
-            <img class="icone" src="img/metas/04.svg" alt="Prancheta com planejamento">
+            <img class="icone" src="img/metas/04.svg" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo tcenter cinza top50">PLANEJAMENTO</h3>
             <p class="paragrafo tcenter cinza">
                 Promover mecanismos para a criação de capacidades para o planejamento
