--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h3 class="titulo">METAS</h3>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/Metas/01.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/Metas/01.png" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo cinza top50">ADAPTAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 reforçar a resiliência e a capacidade de adaptação a riscos
@@ -106,7 +106,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/Metas/02.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/Metas/02.png" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo tcenter cinza top50">INTEGRAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 integrar medidas da mudança do clima nas políticas, estratégias e
@@ -126,7 +126,7 @@
 
         <div class="coluna quatro">
 
-            <img class="icone" src="img/Metas/04.svg" alt="é um icone de geradores de energia eólica">
+            <img class="icone" src="img/Metas/04.png" alt="é um icone de geradores de energia eólica">
             <h3 class="subtitulo tcenter cinza top50">PLANEJAMENTO</h3>
             <p class="paragrafo tcenter cinza">
                 Promover mecanismos para a criação de capacidades para o planejamento
