--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li> <a href="#porque">Porquê</a></li>
             <li> <a href="#metas">Metas</a></li>
             <li> <a href="#causas">Causas</a></li>
-            <li> <a href="#acoes">Ações</a></li>
+            <li> <a href="#consequencias">Consequências</a></li>
             <li> <a href="#sobre">Sobre</a></li>
         </ul>
 
@@ -39,8 +39,7 @@
 
 
         <p class="paragrafo">
-            Pesquisas da University of California, Los Angeles (UCLA) mostraram que as mudanças climáticas podem estar
-            afetando a fertilidade.
+            Devemos tomar medidas urgências para interromper o avanço da temperatura global e seus danos!.
         </p>
 
 
@@ -67,26 +66,22 @@
         <h2 class="titulo tcenter">por que combater a mudança climática?</h2>
 
         <div class="coluna dois">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/1n-1LppsBrQ?controls=0" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/ruOzd5Mthnc" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
         </div>
 
         <div class="coluna dois">
 
             <p class="paragrafo tleft cinza">
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 years old.
+                O nosso planeta vem enfrentando mudanças climáticas naturais ao decorrer de toda sua existência, entretanto as ações do ser humano causaram uma interferência que será catastrófica para a sobrevivência da vida na terra.
             </p>
 
             <p class="paragrafo tleft cinza">
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 years old.
+                Nossa produção de lixo, descarte incorreto de demais resíduos, emissão de poluentes como veículos movidos a gasolina, fazendas de gado e outros métodos de agricultura estarão de forma individual contribuindo para o aquecimento global da temperatura, do qual, é capaz de desenfrear diversas mudanças climáticas como aumento do nível do mar, que por sua vez submergiria cidades e até mesmo países interior.
             </p>
 
             <p class="paragrafo tleft cinza">
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 years old.
+                Com a alteração da temperatura a natureza reagiria de forma a se defender, furacões, tornados, inundações, essas seriam as consequências, além da interferência direta na produção de alimento e afins, toda as formas produtivas da terra que possibilitam nossa sobrevivência estariam condenadas. Devemos tomar atitudes urgentes para assegurar a sobrevivência do nosso planeta!
             </p>
         </div>
 
@@ -97,7 +92,7 @@
         <h3 class="titulo">METAS</h3>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/01.png" alt="icone de Lamapada com engranagem e chip">
+            <img class="icone" src="img/Metas/01.png" alt="icone de Lamapada com engranagem e chip">
             <h3 class="subtitulo cinza top50">ADAPTAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 reforçar a resiliência e a capacidade de adaptação a riscos
@@ -106,7 +101,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/02.png" alt="icone de peças de quebra-cabeça">
+            <img class="icone" src="img/Metas/02.png" alt="icone de peças de quebra-cabeça">
             <h3 class="subtitulo tcenter cinza top50">INTEGRAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 integrar medidas da mudança do clima nas políticas, estratégias e
@@ -115,7 +110,7 @@
         </div>
 
         <div class="coluna quatro">
-            <img class="icone" src="img/METAS/03.png" alt="icone de três mão juntas">
+            <img class="icone" src="img/Metas/03.png" alt="icone de três mão juntas">
             <h3 class="subtitulo tcenter cinza top50">CONCIENTIZAÇÃO</h3>
             <p class="paragrafo tcenter cinza">
                 melhorar a educação, aumentar a conscientização e a capacidade humana
@@ -126,7 +121,7 @@
 
         <div class="coluna quatro">
 
-            <img class="icone" src="img/metas/04.png" alt="icone de prancheta com rota">
+            <img class="icone" src="img/Metas/04.png" alt="icone de prancheta com rota">
             <h3 class="subtitulo tcenter cinza top50">PLANEJAMENTO</h3>
             <p class="paragrafo tcenter cinza">
                 Promover mecanismos para a criação de capacidades para o planejamento
@@ -143,24 +138,21 @@
         <div class="coluna tres">
             <img class="img_poluente" src="img/Causas/01.png" alt="foto de queimadas em florestal">
             <p class="paragrafo tcenter">
-                EXEMPLIAR AQUI POR QUE AS QUEIMADAS FLORESTAIS FAZEM MAL AO MEIO AMBIENTE COM A
-                EMISSÃO DE CO2
+                Responsável por manter o planeta aquecido, o CO2 se emitido de forma não natural causa um excesso de concentração na atmosfera, intensificando o efeito estufa e gerando mudanças climáticas gráves.
             </p>
         </div>
 
         <div class="coluna tres">
             <img class="img_poluente" src="img/Causas/02.png" alt="foto de carros emitindo poluição">
             <p class="paragrafo tcenter">
-                EXEMPLIAR AQUI POR QUE AS QUEIMADAS FLORESTAIS FAZEM MAL AO MEIO AMBIENTE COM A
-                EMISSÃO DE CO2
+                Responsável por 15 a 20% do efeito estufa, seu potencial de aquecimento global é 20 vezes maior que o CO2, o aumento global de emissão de CH4 é de 0,6% ao ano.
             </p>
         </div>
 
         <div class="coluna tres">
             <img class="img_poluente" src="img/Causas/03.png" alt="foto de bois em uma fazenda">
             <p class="paragrafo tcenter">
-                EXEMPLIAR AQUI POR QUE AS QUEIMADAS FLORESTAIS FAZEM MAL AO MEIO AMBIENTE COM A
-                EMISSÃO DE CO2
+                N2O tem a propriedade de retenção de calor 300 vezes maior do que o CO2, sua permanência na camada de ozônio leva cerca de 100 anos para se degradar de forma natural, o que implica no acumulo de calor global.
             </p>
         </div>
 
@@ -177,10 +169,10 @@
         <div class="coluna tres">
             <!-- TERCEIRO ICONE-->
             <img class="icone" src="img/01-temperatura.svg" alt="é um icone de geradores de energia eólica">
-            <h3 class="subtitulo tcenter cinza top50">DERRETIMENTO DAS GELEIRAS</h3>
+            <h3 class="subtitulo tcenter cinza top50">TEMPERATURAS EXTREMAS</h3>
             <p class="paragrafo tcenter cinza">
-                reforçar a resiliência e a capacidade de adaptação a riscos
-                relacionados ao clima e às catástrofes naturais em todos os países.
+               O augmento global da temperatura pode ocasionar temperaturas extramas como frios intensos em regiões tropicais e calor a niveis record em regiões típicamente frias.
+               esse tipo de alterção causa destruição de plantações, intensifica a propagação de pragas e doenças.
             </p>
         </div>
 
@@ -188,10 +180,9 @@
             <!-- SEGUNDO ICONE-->
             <img class="icone" src="img/02-derretimento.svg"
                 alt="icone de um icebarg derretendo, simbolisando os danos no derretimento das geleiras">
-            <h3 class="subtitulo tcenter cinza top50">TEMPERATURAS EXTERMAS</h3>
+            <h3 class="subtitulo tcenter cinza top50">DERRETIMENTO DAS GELEIRAS</h3>
             <p class="paragrafo tcenter cinza">
-                reforçar a resiliência e a capacidade de adaptação a riscos
-                relacionados ao clima e às catástrofes naturais em todos os países.
+               Cidades costerias e paises ilha poderiam desaparecer do mapa! além do aumento do nível do mar, o aquecimento global derrete geleiras antigas que poderiam liberar na atmosfera virus de 15.000 anos.
             </p>
         </div>
 
@@ -201,8 +192,7 @@
                 alt="Icone de um planeta ao lado de raio e furacões representando mudanças climaticas">
             <h3 class="subtitulo tcenter cinza top50">MUDANÇAS CLIMATICAS</h3>
             <p class="paragrafo tcenter cinza">
-                reforçar a resiliência e a capacidade de adaptação a riscos
-                relacionados ao clima e às catástrofes naturais em todos os países.
+                Furações, inundações, tornados, tempestades e calores intensos, as mudanças climáticas seriam catastróficas! implicaria diretamente na produção agricola e na migrassão de passaros e outros animais, alterando de forma drastica a natureza.
             </p>
         </div>
 
@@ -213,13 +203,21 @@
         <div class="coluna dois">
             <h2 class="titulo tcenter floatbot">Sobre</h2>
             <p class="paragrafo tleft cinza left5">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in
-                some form, by injected humour, or randomised words which don't look even slightly believable. If you are
-                going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                the
-                middle of text.
+                Olá! Sou o Leandro, tenho 22 anos e este é meu primeiro site! Sou entusiasta e apaixonado por tecnologia.
             </p>
+
+            <p class="paragrafo tleft cinza left5">
+                Sou de Suzano – SP, Passo boa parte do meu tempo livre consumindo informações, sou fascinado pela evolução e sinceramente? Gostaria de estar vivo daqui a 100 anos só pela curiosidade de saber como é o futuro!
+            </p>
+
+            <p class="paragrafo tleft cinza left5">
+                O Curso “Meu Primeiro Site” da J.A Brasil me ofereceu um novo horizonte de possibilidades, adquiri novos conhecimentos que me foram passados por profissionais dedicados e empenhados em ensinar do ZERO, a como construir um site em HTML e CSS em apenas três semanas, tenho orgulho de gratidão por ter participado desse curso.
+            </p>
+
+            <p class="paragrafo tleft cinza left5">
+                Busquei trazer neste projeto a visibilidade para as questões estabelecidas na ODS 13 das ONU, sua importância interfere a tudo e a todos, espero que desfrutem do breve conteúdo, Grato.
+            </p>
+
         </div>
 
         <div class="coluna dois">
@@ -232,8 +230,8 @@
     <footer>
         <div class="coluna tres">
             <!-- MEU PRIMEIRO SITE (E DESCRIÇÃO)-->
-            <h2 class="titulo fz200 tleft left5">Meu Primeiro Site</h2>
-            <p class="paragrafo tleft left5">
+            <h2 class="titulo fz200 tcenter left5">Meu Primeiro Site</h2>
+            <p class="paragrafo tcenter left5">
                 Projeto desenvolvido durante o curso Meu Primeiro Site, promovido pela Junior Achievement Brasil e
                 Microsoft.
             </p>
@@ -241,22 +239,11 @@
 
         <div class="coluna tres">
             <!-- CREDITOS (E DESCRIÇÃO)-->
-            <h2 class="titulo fz200 tleft">Créditos</h2>
-            <p class="paragrafo tleft">
+            <h2 class="titulo fz200 tcenter">Créditos</h2>
+            <p class="paragrafo tcenter">
                 Pexels, Freepik, Flaticon, Color Adobe, Canva.
             </p>
         </div>
-
-        <div class="coluna tres">
-            <!-- CONTATO (E REDES SOCIAIS)-->
-            <h2 class="titulo fz200 tleft">CONTATO</h2>
-
-            <!--<div class="contato email"></div>
-            <div class="contato linkedin"></div>
-            <div class="contato github"></div>
-            <div class="contato instagram"></div> -->
-        </div>
-
 </body>
 
 
